--- a/app/src/main/res/layout/activity_image_process.xml
+++ b/app/src/main/res/layout/activity_image_process.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            />
 
             <include layout="@layout/layout_draggroup"
                 android:layout_height="match_parent"
