--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,82 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="mine.demo1.MainActivity">
-
-    <Button
-        android:id="@+id/button1"
-        android:textAllCaps="false"
+    <ListView
+        android:id="@+id/mian_lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button1" />
-
-    <Button
-        android:id="@+id/button2"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button2" />
-
-    <Button
-        android:id="@+id/button3"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button3" />
-
-    <Button
-        android:id="@+id/button4"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button4" />
-
-    <Button
-        android:id="@+id/button5"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button5" />
-
-    <Button
-        android:id="@+id/button6"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button6" />
-
-    <Button
-        android:id="@+id/button7"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button7" />
-
-    <Button
-        android:id="@+id/button8"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button8" />
-
-    <Button
-        android:id="@+id/button9"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button9" />
-
-    <Button
-        android:id="@+id/button10"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="viewpager_pinchimageview" />
-
-    <Button
-        android:id="@+id/button11"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="button11" />
-
+        android:layout_height="match_parent">
+    </ListView>
 </LinearLayout>
