--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,13 @@
     <color name="balck_title">#333333</color> <!-- 标题黑 -->
     <color name="alert_gray">#909090</color> <!-- 提示框文字颜色 -->
 
+
+
+    <color name="btn_shape_pressed">#e0e0e0</color>
+    <color name="btn_shape_normal">#606060</color>
+    <color name="alpha_black30">#ca4325</color>  <!-- 半透明黑（淡） -->
+
+
     <color name="alert_btn_bg_normal">#F5F5F5</color>
     <color name="alert_btn_bg_pressed">#DCDCDC</color>
     <color name="alert_btn_box">#A9A9A9</color>
